Fixing bug where there would be an overflow of content for 'PostCard' components

--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -29,6 +29,7 @@
 
 .card__content {
   padding: 1rem;
+  width: 100%;
 }
 
 .card__title {
